[flake8]
# ignore = E501
max-line-length = 120
per-file-ignores = __init__.py:F401

[mypy]
files=pyexam

[mypy-yaml.*]
ignore_missing_imports = True

[metadata]
name = pyexam
version = 0.1.1
author = Rui Almeida
author_email = ruial@outlook.com
license = MIT
description = Convert simple YAML documents to LaTeX and PDF exams
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
keywords = exam, latex, pdf, template, yaml
url = https://github.com/ruial/pyexam
project_urls =
    Bug Tracker = https://github.com/ruial/pyexam/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    pyyaml >= 6.0
    pydantic >= 1.9
    jinja2 >= 3.0.0
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.package_data]
pyexam = templates/*.j2

[options.entry_points]
console_scripts =
    pyexam = pyexam.__main__:main
